--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -33,8 +33,6 @@ gold_sponsors:
     img: htmlburger.png
   - url: https://chaitin.cn/en/
     img: chaitin.png
-  - url: http://monterail.com/
-    img: monterail.png
   - url: https://anymod.com
     img: anymod.png
   - url: https://www.frontenddeveloperlove.com/
@@ -53,6 +51,10 @@ gold_sponsors:
     img: vuejobs.png
   - url: https://leanpub.com/vuejs2
     img: tmvuejs2.png
+  - url: https://www.bmqb.com/jobs
+    img: bmqb.png
+  - url: https://codepilot.ai
+    img: codepilot.png
 
 bronze_sponsors:
   - url: http://tighten.co/
