--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -57,6 +57,14 @@ gold_sponsors:
     img: teamextension.png
   - url: https://jsguru.io/
     img: jsguru.png
+  - url: http://aaha.co/
+    img: aaha.png
+  - url: https://www.valuecoders.com
+    img: valuecoders.png
+  - url: https://www.nsoft.com/careers/
+    img: nsoft.png
+  - url: https://www.pubnub.com/vue-js/
+    img: pubnub.png
 
 bronze_sponsors:
   - url: http://tighten.co/
