--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -75,3 +75,8 @@ bronze_sponsors:
     img: https://www.accelebrate.com/assets/images/accelebrate_logo@2x.png
   - url: https://pullstring.com
     img: https://i.imgur.com/hQHW6TB.png
+
+video_sponsors_china:
+  - url: https://www.youku.com/
+    img: youku.png
+
