--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -8,15 +8,15 @@ platinum_sponsors_china:
     img: geekbang.png
   - url: https://gitee.com/?from=vue
     img: gitee.png
-    ad_img: gitee_ad.png
 
 video_sponsors_china:
   - url: http://cloud.youku.com/index.php?source=vuejs
     img: youku.png
 
 special_sponsors:
-  - url: https://stdlib.com
-    img: stdlib.png
+  - url: https://code.xyz/
+    img: codexyz.png
+    description: Build APIs in Your Web Browser
 
 platinum_sponsors:
   - url: https://www.bitsrc.io/?utm_source=vue&utm_medium=vue&utm_campaign=vue&utm_term=vue&utm_content=vue
@@ -93,6 +93,15 @@ gold_sponsors:
   - url: https://tidelift.com/subscription/npm/vue
     img: tidelift.png
     name: tidelift
+  - url: https://webdock.io/en
+    img: webdock.png
+    name: webdock
+  - url: https://syncfusion.com/products/vue
+    img: syncfusion.png
+    name: syncfusion
+  - url: https://kintohub.com
+    img: kintohub.png
+    name: kinto hub
 
 silver_sponsors:
   - url: https://dopamine.bg/
@@ -112,3 +121,9 @@ bronze_sponsors:
   - url: https://pullstring.com
     img: https://i.imgur.com/hQHW6TB.png
     name: pull string
+  - url: https://www.earthlink.ro
+    img: https://i.imgur.com/qX0SNa7.png
+    name: earthlink
+  - url: https://polyglotengineer.com/derek.pollard
+    img: https://polyglotengineer.com/DP.png
+    name: Derek Pollard
