--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -102,6 +102,9 @@ gold_sponsors:
   - url: https://kintohub.com
     img: kintohub.png
     name: kinto hub
+  - url: https://opteo.com/vue
+    img: opteo.png
+    name: opteo
 
 silver_sponsors:
   - url: https://dopamine.bg/
