--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -4,8 +4,8 @@ root_domain: cn.vuejs.org
 vue_version: 2.5.16
 
 platinum_sponsors_china: []
-#   - url: https://gitee.com/?from=vue
-#     img: gitee.png
+  - url: https://gitee.com/?from=vue
+    img: gitee.png
 
 video_sponsors_china:
   - url: http://cloud.youku.com/index.php?source=vuejs
