chore: update sponsors

--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -4,8 +4,6 @@ root_domain: cn.vuejs.org
 vue_version: 2.5.16
 
 platinum_sponsors_china:
-  - url: https://www.geekbang.org/
-    img: geekbang.png
   - url: https://gitee.com/?from=vue
     img: gitee.png
 
@@ -14,9 +12,9 @@ video_sponsors_china:
     img: youku.png
 
 special_sponsors:
-  - url: https://code.xyz/
-    img: codexyz.png
-    description: Build APIs in Your Web Browser
+  - url: https://stdlib.com/
+    img: stdlib.png
+    description: 几分钟内在云端构建发布 API，免费试用。
 
 platinum_sponsors:
   - url: https://www.bitsrc.io/?utm_source=vue&utm_medium=vue&utm_campaign=vue&utm_term=vue&utm_content=vue
@@ -60,18 +58,12 @@ gold_sponsors:
   - url: https://neds.com.au/
     img: neds.png
     name: neds
-  - url: https://hackr.io/tutorials/learn-vue-js
-    img: hackr-io.png
-    name: hacker io
   - url: https://icons8.com/
     img: icons8.png
     name: icons 8
   - url: https://vuejobs.com/?ref=vuejs
     img: vuejobs.png
     name: vue jobs
-  - url: https://codepilot.ai
-    img: codepilot.png
-    name: code pilot
   - url: https://teamextension.io/
     img: teamextension.png
     name: team extension
@@ -81,15 +73,6 @@ gold_sponsors:
   - url: https://www.valuecoders.com
     img: valuecoders.png
     name: value coders dot org
-  - url: https://www.nsoft.com/careers/
-    img: nsoft.png
-    name: n soft
-  - url: https://coreui.io/?utm_source=vuejs&utm_medium=logo&utm_campaign=homepage
-    img: coreui.png
-    name: core ui
-  - url: https://piio.co/vuejs?ref=vuejs
-    img: piio.png
-    name: piio
   - url: https://tidelift.com/subscription/npm/vue
     img: tidelift.png
     name: tidelift
@@ -99,15 +82,12 @@ gold_sponsors:
   - url: https://syncfusion.com/products/vue
     img: syncfusion.png
     name: syncfusion
-  - url: https://kintohub.com
-    img: kintohub.png
-    name: kinto hub
   - url: https://opteo.com/vue
     img: opteo.png
     name: opteo
-  - url: https://issue.sh
-    img: issue-sh.png
-    name: issue sh
+  - url: https://courses.wilderminds.com/p/vue-js-by-example
+    img: wilderminds.png
+    name: wilder minds
 
 silver_sponsors:
   - url: https://dopamine.bg/
