--- a/themes/vue/_config.yml
+++ b/themes/vue/_config.yml
@@ -4,8 +4,8 @@ root_domain: cn.vuejs.org
 vue_version: 2.5.16
 
 platinum_sponsors_china:
-  - url: https://studio.qcloud.coding.net/campaign/favorite-plugins/?utm_source=vue.js&utm_content=cs-logo
-    img: cloudstudio.png
+  - url: https://e.coding.net/?utm_source=vue.js
+    img: coding.png
   - url: http://www.dcloud.io/?hmsr=vuejsorg&hmpl=&hmcu=&hmkw=&hmci=
     img: dcloud.gif
 
